--- a/mern_skeleton/package.json
+++ b/mern_skeleton/package.json
@@ -1,36 +1,40 @@
 {
-  "name": "mern_skeleton",
-  "version": "1.0.0",
+  "name": "react-portfolio",
+  "private": true,
+  "version": "0.0.0",
   "type": "module",
-  "main": "index.js",
-  "author": "Blessing Ajiboye",
-  "license": "MIT",
-  "devDependencies": {
-    "@babel/core": "^7.28.4",
-    "@babel/preset-env": "^7.28.3",
-    "babel-loader": "^10.0.0",
-    "concurrently": "^9.2.1",
-    "nodemon": "^3.1.10"
-  },
   "scripts": {
-    "dev": "concurrently 'vite' \"nodemon server.js\"",
+    "dev": "concurrently \"vite\" \"nodemon ../server.js\"",
     "build": "vite build",
-    "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest"
   },
   "dependencies": {
-    "body-parser": "^2.2.0",
-    "compression": "^1.8.1",
-    "cookie-parser": "^1.4.7",
-    "cors": "^2.8.5",
-    "crypto": "^1.0.1",
-    "express": "^5.1.0",
+    "bcryptjs": "^3.0.2",
     "express-jwt": "^8.5.1",
-    "global": "^4.4.0",
-    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
-    "lodash": "^4.17.21",
-    "method-override": "^3.0.0",
-    "mongoose": "^8.18.2"
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.28.5",
+    "@babel/preset-react": "^7.28.5",
+    "@eslint/js": "^9.36.0",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@types/react": "^19.1.13",
+    "@types/react-dom": "^19.1.9",
+    "@vitejs/plugin-react": "^5.0.3",
+    "babel-jest": "^30.2.0",
+    "concurrently": "^9.2.1",
+    "cypress": "^15.7.1",
+    "eslint": "^9.36.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "globals": "^16.4.0",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
+    "nodemon": "^3.1.10",
+    "vite": "^7.1.7"
   }
 }
