--- a/mern_skeleton/package.json
+++ b/mern_skeleton/package.json
@@ -1,40 +1,22 @@
 {
-  "name": "react-portfolio",
-  "private": true,
-  "version": "0.0.0",
+  "name": "portfolio-backend",
+  "version": "1.0.0",
   "type": "module",
+  "main": "server.js",
   "scripts": {
-    "dev": "concurrently \"vite\" \"nodemon ../server.js\"",
-    "build": "vite build",
-    "preview": "vite preview",
-    "test": "jest"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
+    "express": "^4.21.2",
+    "mongoose": "^8.8.4",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "bcryptjs": "^3.0.2",
-    "express-jwt": "^8.5.1",
     "jsonwebtoken": "^9.0.2",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "express-jwt": "^8.5.1"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.28.5",
-    "@babel/preset-react": "^7.28.5",
-    "@eslint/js": "^9.36.0",
-    "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/react": "^16.3.0",
-    "@types/react": "^19.1.13",
-    "@types/react-dom": "^19.1.9",
-    "@vitejs/plugin-react": "^5.0.3",
-    "babel-jest": "^30.2.0",
-    "concurrently": "^9.2.1",
-    "cypress": "^15.7.1",
-    "eslint": "^9.36.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.4.0",
-    "jest": "^30.2.0",
-    "jest-environment-jsdom": "^30.2.0",
-    "nodemon": "^3.1.10",
-    "vite": "^7.1.7"
+    "nodemon": "^3.1.10"
   }
 }
